<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Glass ToDo</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="title_activity_main">Main Activity</string>
    
    <string name="title_activity_database">Database Activity</string>
    <string name="title_activity_displaytasklist_message">Display Task List</string>
    <string name="title_activity_display_item">Display Item</string>
    
    <string name="find_text">Find</string>
    <string name="get_text">Get</string>
    <string name="add_string">Add</string>
    <string name="delete_text">Delete</string>
    
    <string name="list_text">List</string>
    <string name="taskid_text">Task ID</string>
    
    <string name="record">Record</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    
    <string name="idvalue_text">None</string>
    <string name="taskdesc_text">Task Description</string>
    

</resources>
